# risc0-rust-starter

./: Cargo.toml  README.md  zargo.sh
docs/: naive-code-breakdown.md
host/: Cargo.toml
host/src/: main.rs
methods/: Cargo.toml  build.rs  lib.rs
methods/guest/: Cargo.toml
risc0-build-methods/: Cargo.toml
src/: main.rs
starter/: Cargo.toml
starter/src/: main.rs
