[workspace]
members = [
    "methods",
    "starter",
]

[patch.crates-io]
risc0-zkvm = { git = "https://github.com/risc0/risc0.git", rev = "7eaa1354a536ec22f55af1a6eafc1ee9bb8b2cbc", default-features = false }
risc0-zkvm-sys = { git = "https://github.com/risc0/risc0.git", rev = "7eaa1354a536ec22f55af1a6eafc1ee9bb8b2cbc", default-features = false }
risc0-build = { git = "https://github.com/risc0/risc0.git", rev = "7eaa1354a536ec22f55af1a6eafc1ee9bb8b2cbc", default-features = false }
