[workspace]
members = [
    "methods",
    "starter",
]

[patch.crates-io]
risc0-zkvm = { git = "https://github.com/risc0/risc0.git", rev = "d5e98c1058b69e53441e1a6bf97a598c7db60264", default-features = false }
risc0-zkvm-sys = { git = "https://github.com/risc0/risc0.git", rev = "d5e98c1058b69e53441e1a6bf97a598c7db60264", default-features = false }
risc0-build = { git = "https://github.com/risc0/risc0.git", rev = "d5e98c1058b69e53441e1a6bf97a598c7db60264", default-features = false }
risc0-zkvm-guest = { git = "https://github.com/risc0/risc0.git", rev = "d5e98c1058b69e53441e1a6bf97a598c7db60264", default-features = false }
